# JiraScope

./: .cursorrules  .dockerignore  .env.dist  .gitignore  .mcp.json.template  .pre-commit-config.yaml  CHANGELOG.md  CLI_USAGE.md  CURSOR_RULES_ANALYSIS.md  Dockerfile  GHA_FIXES_IMPLEMENTED.md  GHA_ISSUES_ANALYSIS.md  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  README.md  README_LINTING.md  WEB_USAGE.md  activate.sh  docker-compose.yml  mcp_server.py  pyproject.toml  ruff.toml  test_auth_output.txt
.cursor/log/: pre-commit-fix-worklog.md
.cursor/rules/: analysis-modules.mdc  cli-commands.mdc  cost-optimization.mdc  data-pipeline.mdc  development-guide.mdc  external-services.mdc  how-to-run.mdc  project-overview.mdc  testing-and-ci.mdc  testing-guide.mdc  troubleshooting.mdc  web-interface.mdc
.github/workflows/: pylint.yml
config/: env.example  jirascope.yaml  jirascope.yaml.example
docs/: CLI_USAGE.md  LINTING.md  MVP.md  PHASE5_SUMMARY.md  README.md  WEB_USAGE.md  development-guide.md  test-integrity-analysis.md
docs/api/: README.md
docs/examples/: lmstudio_prompts.md
examples/: lmstudio_prompts.md
scripts/: lint.py  lmstudio_integration_setup.py  start_mcp_server.py  test_integration.py
src/cli/: __init__.py  export.py  main.py  utils.py
src/jirascope/: __init__.py
src/jirascope/analysis/: __init__.py  content_analyzer.py  cross_epic_analyzer.py  similarity_analyzer.py  structural_analyzer.py  template_inference.py  temporal_analyzer.py
src/jirascope/cli/: __init__.py  main.py
src/jirascope/clients/: __init__.py  auth.py  claude_client.py  lmstudio_client.py  mcp_client.py  qdrant_client.py
src/jirascope/core/: config.py
src/jirascope/extractors/: __init__.py  jira_extractor.py
src/jirascope/mcp_server/: __init__.py  server.py  tools.py
src/jirascope/models/: __init__.py  analysis.py  work_item.py
src/jirascope/pipeline/: __init__.py  comprehensive_quality_tester.py  embedding_processor.py  incremental_processor.py  quality_validator.py  rag_quality_tester.py  smart_chunker.py  test_query_framework.py
src/jirascope/rag/: __init__.py  context_assembler.py  pipeline.py  query_processor.py  retrieval_engine.py
src/jirascope/utils/: __init__.py  cost_optimizer.py  cost_reporter.py  logging.py
src/web/: __init__.py  main.py  models.py  services.py
src/web/static/: index.html
tests/: README.md  conftest.py  test_content_analyzer.py  test_cost_optimization.py  test_cross_epic_analyzer.py  test_embedding_processor.py  test_jira_extractor.py  test_phase1_enhanced_storage.py  test_quality_validator.py  test_rag_pipeline.py  test_rag_quality_tester.py  test_similarity_analyzer.py  test_structural_analyzer.py  test_template_inference.py  test_temporal_analyzer.py
tests/fixtures/: analysis_fixtures.py
tests/functional/: __init__.py
tests/functional/cli/: test_cli_commands.py
tests/integration/: __init__.py  test_clients.py
tests/integration/cross_component/: test_client_interactions.py
tests/integration/pipeline/: test_rag_pipeline_integration.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_config.py  test_logging.py  test_models.py
tests/unit/analysis/: test_content_analyzer.py  test_cross_epic_analyzer.py  test_cross_epic_analyzer_extended.py  test_similarity_analyzer.py  test_structural_analyzer.py  test_template_inference.py  test_temporal_analyzer.py
tests/unit/clients/: test_auth.py  test_claude_client.py  test_qdrant_client.py
tests/unit/extractors/: test_jira_extractor.py
tests/unit/mcp_server/: test_server.py  test_tools.py
tests/unit/pipeline/: test_comprehensive_quality_tester.py  test_embedding_processor.py  test_incremental_processor.py  test_quality_validator.py  test_smart_chunker.py
tests/unit/rag/: test_rag_pipeline.py  test_rag_quality_tester.py
tests/unit/utils/: test_cost_optimizer.py
