[project]
name = "jirascope"
version = "0.1.0"
description = "AI-powered Jira work item analysis and management tool"
authors = [
    {name = "Alex Shumilov",email = "alex.shumilov@rationalexponent.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.7.0,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "click>=8.1.0,<9.0.0",
    "rich>=13.7.0,<14.0.0",
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "websockets>=12.0,<13.0",
    "httpx>=0.27.0,<0.28.0",
    "pyyaml>=6.0,<7.0",
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "anthropic>=0.8.0,<0.9.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sentry-sdk[fastapi]>=1.40.0,<2.0.0",
    "mcp>=1.0.0,<2.0.0"
]

[project.scripts]
jirascope = "jirascope.cli.main:cli"

[tool.poetry]
packages = [{include = "jirascope", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# Black configuration (backup formatter)
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | htmlcov
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.11"
# Start with lenient settings - gradually make stricter
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient
disallow_incomplete_defs = false  # Start lenient
check_untyped_defs = false  # Start lenient
disallow_untyped_decorators = false  # Start lenient
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Start lenient
warn_no_return = false  # Start lenient
warn_unreachable = true
strict_equality = true
show_error_codes = true
# Ignore missing imports for now
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Gradually enable stricter checking for new modules
[[tool.mypy.overrides]]
module = "jirascope.core.*"
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src/jirascope --cov-report=html --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["src/jirascope"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
